# wholesale-management

./: .gitignore
server/: .env.example  db.sqlite3  f.py  pyproject.toml
server/apps/accounts/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
server/apps/accounts/migrations/: 0001_initial.py
server/apps/core/: models.py  pagination.py  public_views.py  serializers.py  urls.py  views.py
server/apps/core/migrations/: 0001_initial.py
server/apps/core/utils/: public_documents.py
server/apps/customers/: filters.py  models.py  serializers.py  urls.py  views.py
server/apps/customers/migrations/: 0001_initial.py
server/apps/dashboard/: serializers.py  views.py
server/apps/factories/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
server/apps/factories/migrations/: 0001_initial.py
server/apps/inventory/: filters.py  models.py  serializers.py  urls.py  views.py
server/apps/payments/: filters.py  models.py  serializers.py  urls.py  views.py
server/apps/purchases/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
server/apps/sales/: apps.py  filters.py  models.py  serializers.py  views.py
server/apps/sales/migrations/: 0001_initial.py
server/config/: settings.py  urls.py
server/invoice/purchases/: generator.py  registry.py
server/invoice/sales/: generator.py  registry.py
server/invoice/utils/: pdf_theme.py  public_documents.py
server/templates/accounts/: reset_password_email.html
server/templates/invoices/: purchase_invoice.html
server/utils/: email.py  exception_handler.py  pdf_theme.py
(+136 files in other folders)
